--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,12 @@
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
         </activity>
+
         <service
             android:name=".MyService"
             android:enabled="true"
@@ -24,7 +25,10 @@
             android:name=".MediaService"
             android:enabled="true"
             android:exported="true" />
-        <activity android:name=".homework02_1"></activity>
+
+        <activity android:name=".homework02_1" />
+        <activity android:name=".homework02_2" />
+        <activity android:name=".MyOpenHelper"></activity>
     </application>
 
 </manifest>
